welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:8: error: illegal start of simple expression
}
^RunFour:10: error: 'while' expected but 'if' found.
if (estSurBiscuit && dejafait!=nbPas)
^RunFour:11: error: '(' expected but ';' found.
{
^