welcome.lessons.welcome.variables.RunFour.scala.code
var nbPas:Int =0
var dejafait:Int =4
do
{
	avance();
while (!estSurBiscuit)
}

if (estSurBiscuit && dejafait!=nbPas)
{
	nbPas = nbPas + 1
	avance();

}
